# ethereum-event-collector

./:  .rustfmt.toml  Cargo.toml  README.md
config/: collector.yaml
src/: main.rs
src/config/: eth.rs  mod.rs
src/services/: app.rs  collector.rs  eth.rs  mod.rs
src/utils/: app.rs  cfg.rs  err.rs  log.rs  mod.rs  service.rs
